--- a/book-backend/src/main/resources/application.properties
+++ b/book-backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.data.mongodb.uri=${MONGO_DB_URI}
 server.port=${SERVER_PORT}
 apiUrl=${API_URL}
+spring.mvc.cors.enable=true
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET, POST, PUT, DELETE
+spring.mvc.cors.allowed-headers=Content-Type, Authorization
+spring.mvc.cors.allow-credentials=true
